# qwen3-distill

./: .gitignore  GENERATE_DATA_LOCAL.md  HF_UPLOAD_SUMMARY.md  LOCAL_DATA_SETUP.md  PLAN.md  README.md  README_LOCAL_DATA.md  READY_TO_TRAIN.md  REPOSITORY_SEPARATION.md  STATUS.md  TRAINING_READY.md  generate_data_kimi_v2.py  note.md  pyproject.toml  requirements.txt  train_unsloth.py
data/: agent_reasoning_examples.py
data/mlx_data/: train.jsonl  valid.jsonl
data/mlx_data_combined/: train.jsonl  valid.jsonl
data/prompts/: complex_reasoning.txt  hard_javascript.txt  kimi_agents.txt  kimi_coding.txt  kimi_debugging.txt  kimi_tools.txt  python_matplotlib_viz.txt  react_animations_gsap.txt
scripts/: README.md  add_examples.py  coding_interview_examples.py  conceptual_examples.py  debugging_examples.py  filter_long_sequences.py  generate_all_categories.py  generate_data_kimi.py  generate_data_parallel.py  generate_dataset2.py  generate_dataset3.py  generate_local_api_data.py  generate_synthetic_data.py  generate_tooluse_data.py  generate_training_data.py  javascript_examples.py  merge_data.py  python_distill_examples.py  react_training_examples.py  tools_integration_examples.py
training/: README.md  export_gguf.sh  merge_and_train.sh  requirements-gpu.txt  setup.sh  train_and_export.sh  train_dataset2_merged.sh  train_mlx.sh  train_mlx_resume.sh  train_nosana.py  train_unsloth.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
