[project]
name = "qwen3-distill"
version = "0.1.0"
description = "Qwen3-8B distillation for coding tasks"
requires-python = ">=3.10"

dependencies = [
    # API clients
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",

    # Data processing
    "tqdm>=4.66.0",
    "datasets>=2.14.0",

    # Training
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
    "trl>=0.7.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",

    # Utils
    "huggingface-hub>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
